[package]
name = "tracknow-connector"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Gorin <mxmgorin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.228"
reqwest = "0.12.23"

[dev-dependencies]
pollster = { version = "0.4.0" }
