[package]
name = "tracknow-connector"
version = "0.1.3"
edition = "2021"
authors = ["Maxim Gorin <mxmgorin@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.228"
serde_json = "1.0.145"
flurl = { git = "https://github.com/MyJetTools/fl-url.git", tag = "0.6.1" }
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "*", features = ["full"] }
